syntax = "proto3";
package peggy.v1;

import "peggy/v1/genesis.proto";
import "peggy/v1/types.proto";
import "peggy/v1/batch.proto";
import "peggy/v1/msgs.proto";
import "google/api/annotations.proto";


option go_package = "github.com/althea-net/peggy/module/x/peggy/types";

// Query defines the gRPC querier service
service Query {
    // PARAMS
    rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
        option (google.api.http).get = "/peggy/v1/params";
    }

    // VALSETS
    rpc CurrentValset (QueryCurrentValsetRequest) returns (QueryCurrentValsetResponse) {
        option (google.api.http).get = "/peggy/v1/valset/current";
    }
    rpc ValsetRequest (QueryValsetRequestRequest) returns (QueryValsetRequestResponse) {
        option (google.api.http).get = "/peggy/v1/valset/{nonce}";
    }
    rpc ValsetConfirm (QueryValsetConfirmRequest) returns (QueryValsetConfirmResponse) {
        option (google.api.http).get = "/peggy/v1/valset/{nonce}/{validator}/confirm";
    }
    rpc ValsetConfirmsByNonce (QueryValsetConfirmsByNonceRequest) returns (QueryValsetConfirmsByNonceResponse) {
        option (google.api.http).get = "/peggy/v1/confirms/{nonce}";
    }
    rpc LastValsetRequests (QueryLastValsetRequestsRequest) returns (QueryLastValsetRequestsResponse) {
        option (google.api.http).get = "/peggy/v1/valset/requests";
    }
    rpc LastPendingValsetRequestByAddr (QueryLastPendingValsetRequestByAddrRequest) returns (QueryLastPendingValsetRequestByAddrResponse) {
        option (google.api.http).get = "/peggy/v1/valset/{address}/last";
    }

    // BATCHES
    rpc Batch (QueryBatchRequest) returns (QueryBatchResponse) {
        option (google.api.http).get = "/peggy/v1/batch/{nonce}/{contract}";
    }
    rpc BatchConfirms (QueryBatchConfirmsRequest) returns (QueryBatchConfirmsResponse) {
        option (google.api.http).get = "/peggy/v1/batch/{nonce}/{contract}/confirms";
    }
    rpc LastPendingBatchRequestByAddr (QueryLastPendingBatchRequestByAddrRequest) returns (QueryLastPendingBatchRequestByAddrResponse) {
        option (google.api.http).get = "/peggy/v1/batch/{address}";
    }
    rpc OutgoingTxBatches (QueryOutgoingTxBatchesRequest) returns (QueryOutgoingTxBatchesResponse) {
        option (google.api.http).get = "/peggy/v1";
    }
}

message QueryParamsRequest {}
message QueryParamsResponse {
    Params params = 1;
}

message QueryCurrentValsetRequest {}
message QueryCurrentValsetResponse {
    Valset valset = 1;
}

message QueryValsetRequestRequest {
    uint64 nonce = 1;
}
message QueryValsetRequestResponse {
    Valset valset = 1;
}

message QueryValsetConfirmRequest {
    uint64 nonce     = 1;
    string validator = 2;
}
message QueryValsetConfirmResponse {
    MsgValsetConfirm confirm = 1;
}

message QueryValsetConfirmsByNonceRequest {
    uint64 nonce = 1;
}
message QueryValsetConfirmsByNonceResponse {
    repeated MsgValsetConfirm confirms = 1;
}

message QueryLastValsetRequestsRequest {}
message QueryLastValsetRequestsResponse {
    repeated Valset valsets = 1;
}

message QueryLastPendingValsetRequestByAddrRequest {
    string address = 1;
}
message QueryLastPendingValsetRequestByAddrResponse {
    Valset valset = 1;
}

message QueryBatchRequest {
    uint64 nonce = 1;
    string contract = 2;
}
message QueryBatchResponse {
    OutgoingTxBatch batch = 1;
}

message QueryBatchConfirmsRequest {
    uint64 nonce = 1;
    string contract = 2;
}
message QueryBatchConfirmsResponse {
    repeated MsgConfirmBatch batches = 1;
}

message QueryLastPendingBatchRequestByAddrRequest {
    string address = 1;
}
message QueryLastPendingBatchRequestByAddrResponse {
    OutgoingTxBatch batch = 1;
}

message QueryOutgoingTxBatchesRequest {}
message QueryOutgoingTxBatchesResponse {
    repeated OutgoingTxBatch batches = 1;
}
